# leic-ttm

./: .gitignore  CMakeLists.txt  README.md
archive/: log.txt
classes/: class.cpp  classes.cpp  student.cpp  uc.cpp
docs/: Doxyfile
docs/html/: annotated.html  class__schedule_8h_source.html  class_class_schedule-members.html  class_class_schedule.html  class_interface-members.html  class_interface.html  class_request-members.html  class_request.html  class_slot-members.html  class_slot.html  class_student-members.html  class_student.html  class_t_t_m-members.html  class_t_t_m.html  class_u_c_class-members.html  class_u_c_class.html  classes.html  dir_435cfe2fec158e32f861e3caa2dd76bc.html  dir_650518f44f064b2a56497bc0eceaa601.html  dir_90d0b6eae8414093ea3e30629b207ec1.html  dir_b0a7e89e4c8c1926bb96eae8ff9c0309.html  dir_d522931ffa1371640980b621734a4381.html  files.html  functions.html  functions_func.html  index.html  interface_8h_source.html  request_8h_source.html  slot_8h_source.html  student_8h_source.html  ttm_8h_source.html  uc__class_8h_source.html
docs/latex/: annotated.tex  class__schedule_8h_source.tex  class_class_schedule.tex  class_interface.tex  class_request.tex  class_slot.tex  class_student.tex  class_t_t_m.tex  class_u_c_class.tex  files.tex  (+7 more)
headers/: class.h  class_schedule.h  classes.h  helper.h  interface.h  request.h  slot.h  student.h  ttm.h  uc.h  uc_class.h
schedule/: students_classes.csv
src/: class.cpp  class_schedule.cpp  interface.cpp  main.cpp  readers.cpp  request.cpp  slot.cpp  student.cpp  ttm.cpp  uc.cpp  uc_class.cpp
(+68 files in other folders)
